# supertonic

./: .gitattributes  .gitignore  LICENSE  README.md  test_all.sh
cpp/: CMakeLists.txt  README.md  example_onnx.cpp  helper.cpp  helper.h
csharp/: .gitignore  ExampleONNX.cs  Helper.cs  README.md  Supertonic.csproj
go/: .gitignore  README.md  example_onnx.go  go.mod  go.sum  helper.go
ios/: README.md
ios/ExampleiOSApp/: App.swift  AudioPlayer.swift  ContentView.swift  Info.plist  TTSService.swift  TTSViewModel.swift  project.yml
java/: .gitignore  ExampleONNX.java  Helper.java  README.md  pom.xml
nodejs/: README.md  example_onnx.js  helper.js  package.json
py/: README.md  example_onnx.py  helper.py  pyproject.toml  requirements.txt  service.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: example_onnx.rs  helper.rs
swift/: .gitignore  Package.resolved  Package.swift  README.md
swift/Sources/: ExampleONNX.swift  Helper.swift
web/: README.md  helper.js  index.html  main.js  package.json  style.css  vite.config.js
