[project]
name = "tts-onnx"
version = "1.0.0"
description = "TTS ONNX Inference"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime==1.23.1",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "PyYAML>=6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
